--- a/css/style.css
+++ b/css/style.css
@@ -22,41 +22,95 @@ a {
   text-decoration: none;
 }
 
-#main-container {
+.main__container {
+  margin: auto;
   width: 100%;
+  max-width: 1240px;
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#dashboard {
+  background-color: #0f1424;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  margin: 0 100px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main__row {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-#dashboard #nav-container {
-  width: 30%;
-  background-color: red;
+.main__row .nav__column {
+  margin-right: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 30%;
+      -ms-flex: 30%;
+          flex: 30%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
-#dashboard #menu-container {
-  width: 70%;
-  background-color: #fff;
+.main__row .menu__column {
+  -webkit-box-flex: 70%;
+      -ms-flex: 70%;
+          flex: 70%;
+}
+
+.nav {
+  border-radius: 10px;
+  background-color: #1c1f4a;
+}
+
+.nav .profile {
+  padding: 30px 0px 70px 25px;
+  border-radius: 10px;
+  background-color: #5847eb;
+}
+
+.nav .profile__img {
+  width: 65px;
+  height: 65px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+}
+
+.nav .profile__title {
+  color: #fff;
+  width: 200px;
+  margin-top: 25px;
+}
+
+.nav .profile__title--small {
+  color: #b4b4b4;
+}
+
+.nav .profile__name {
+  font-weight: 300;
+}
+
+.nav .map {
+  padding: 25px 25px 10px 25px;
+}
+
+.nav .map .list__item {
+  margin-bottom: 15px;
+}
+
+.nav .map .list__link {
+  color: rgba(236, 236, 236, 0.4);
+  -webkit-transition: all ease .5s;
+  transition: all ease .5s;
+}
+
+.nav .map .list__link:hover {
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
